# krabbos

./: Cargo.toml  LICENSE  Makefile
src/: main.rs  pic.rs  vga.rs
src/memory/: frame_allocator.rs  mod.rs  paging.rs
src/memory/mapper/: mapped_page_table.rs  mod.rs  offset_page_table.rs
src/pic/: keyboard.rs  mod.rs  timer.rs
src/tables/: exceptions.rs  gdt.rs  idt.rs  mod.rs  port.rs  selectors.rs  tss.rs
