[package]
name = "krabbos"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
spin = "0.9.8"
bitflags = "2.6.0"
bit_field = "0.10.2"
volatile = "0.4.4"
pc-keyboard = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33 
